@@ -106,7 +106,7 @@
             <key>/schemas/apps/mailcheck_applet/prefs/remote_server</key>
             <owner>mailcheck-applet</owner>
             <type>string</type>
-            <default>mail</default>
+            <default></default>
             <locale name="C">
                 <short>The mail server</short>
                 <long>Remote server to connect to for our mail</long>
